Schnittstelle zum Abfragen 'meiner Pflanzen' hinzufügen.
